# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.379 2005/11/15 22:20:42 wolf31o2 Exp $

  15 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Changed version marker to 2.0_pre20051115 for new ebuild.

  15 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Fix bug in livecd stage2 so that it doesnt try to use tar

  14 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Fixed livecd/readme functionality, as reported to gentoo-catalyst mailing
  list by Paul Kessler <kessler@co.wabasha.mn.us> and forward-ported copying
  of Getting_Online.txt from catalyst 1.1.10.10.

  11 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS:
  Added Joshua Kinard to authors for his mips contributions.

  11 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Fixed duplicate linuxrc entry in livecd-stage2_template.spec file. Blame
  Paul Kessler on gentoo-catalyst. ;]

  07 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Change variables from cat1 format to cat2

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage1_target.py:
  Fix modules has no attribute register

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix broken aliases code that was just proof of concept

  07 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Output mkisofs command line options to assist in debugging

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/create-iso.sh:
  Fix the -o option

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Add VERY basic support for aliases kernel parameter.

  07 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py: